--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 @keyframes slideShow {
   0% {
-    opacity: 1;
-    transform: translate3d(100vw, 0vw, 0vw);
+    opacity: 0;
+    transform: translateX(-100vw);
   }
   100% {
     opacity: 1;
-    transform: translate3d(0vw, 0vw, 0vw);
+    transform: translateX(0vw);
   }
 }
 html, body {
@@ -74,7 +74,6 @@ html a, body a {
   margin-top: -52.03125vw;
   position: relative;
   z-index: 9;
-  opacity: 1;
   background-size: cover;
   background-repeat: no-repeat;
 }
