--- a/css/style.css
+++ b/css/style.css
@@ -77,5 +77,12 @@ html a, body a {
   background-size: cover;
   background-repeat: no-repeat;
 }
+.intro_metal {
+  height: 52.03125vw;
+  margin-top: -52.03125vw;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(../resources/metal.png);
+}
 
 /*# sourceMappingURL=style.css.map */
