--- a/css/style.css
+++ b/css/style.css
@@ -186,16 +186,21 @@ html a, body a {
 }
 
 .sectionII {
-  height: 50vw;
+  height: 45vw;
   background-color: #CC6700;
   position: relative;
   top: 0;
   z-index: 1;
   overflow: hidden;
+  color: white;
+}
+.sectionII h1 {
+  text-align: center;
+  font-weight: normal;
 }
 .sectionII_blue_I {
   background-color: #0570B8;
-  height: 35vw;
+  height: 30vw;
   width: 17vw;
   position: relative;
   z-index: 2;
@@ -207,16 +212,31 @@ html a, body a {
   background-color: black;
   position: relative;
   clip-path: polygon(25% 0%, 95% 0%, 75% 100%, 5% 100%);
-  height: 40vw;
-  margin-top: -30vw;
+  height: 35vw;
+  margin-top: -25vw;
+  overflow: hidden;
+}
+.sectionII_black h1 {
+  margin-top: 5vw;
+  font-size: 2.5vw;
+  margin-left: 4vw;
+}
+.sectionII_black_text {
+  height: 15vw;
+  width: 45vw;
+  margin-left: 28vw;
+  margin-top: 2.5vw;
+  text-align: center;
+  font-size: 1.75vw;
+  vertical-align: middle;
 }
 .sectionII_blue_II {
   background-color: #0570B8;
-  height: 35vw;
+  height: 30vw;
   width: 17vw;
   position: relative;
   z-index: 2;
-  top: -35vw;
+  top: -30vw;
   left: 77vw;
   clip-path: polygon(100% 0%, 0% 100%, 100% 100%);
 }
