--- a/sass/main.scss
+++ b/sass/main.scss
@@ -299,3 +299,10 @@ html,body {
         clip-path: polygon(100% 0%, 0% 100%, 100% 100%)
     }
 }
+.sectionIII {
+    background-image: url(../resources/butt.webp);
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-top: -.5vw;
+    height: 33.5vw;
+}
